funcionalidade de agenda pt3

--- a/index.html
+++ b/index.html
@@ -468,6 +468,19 @@
                                 <button type="button" id="add-service-btn" class="btn-add-item">+</button>
                             </div>
                         </div>
+                        <!-- ======================================================= -->
+                        <!-- === NOVA SEÇÃO DE DISPONIBILIDADE SEMANAL (COLE AQUI) === -->
+                        <!-- ======================================================= -->
+                        <div id="availability-management-view" style="display: none;">
+                            <hr class="card-divider">
+                            <label class="form-group-label">Disponibilidade Padrão</label>
+                            <p class="form-group-description">Defina os horários de atendimento em uma semana normal.</p>
+
+                            <div id="weekly-availability-container" class="schedule-details modal-style">
+                                <!-- Dias da semana serão gerados pelo app.js -->
+                            </div>
+                            <button type="button" id="save-availability-btn" class="btn-secondary">Salvar Disponibilidade</button>
+                        </div>                        
                         <!-- =================== FIM DA NOVA SEÇÃO ==================== -->
 
 
