--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <symbol id="icon-devices" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"/><line x1="8" y1="21" x2="16" y2="21"/><line x1="12" y1="17" x2="12" y2="21"/></symbol>
             <symbol id="icon-scan" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><rect x="7" y="7" width="3" height="9"/><rect x="14" y="7" width="3" height="5"/></symbol>
             <symbol id="icon-qr-placeholder" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><rect x="3" y="3" width="5" height="5"/><rect x="3" y="16" width="5" height="5"/><rect x="16" y="3" width="5" height="5"/><path d="M21 16h-3a2 2 0 0 0-2 2v3"/><path d="M21 21v.01"/><path d="M12 7v3a2 2 0 0 1-2 2H7"/><path d="M3 12h.01"/><path d="M12 3h.01"/><path d="M12 16v.01"/><path d="M16 12h1"/><path d="M21 12v.01"/><path d="M12 21v-1"/></symbol>
+            <symbol id="icon-calendar" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></symbol>
         </defs>
     </svg>
 
@@ -41,6 +42,7 @@
                 <img src="./assets/minichat.png" alt="FacilChat" class="header-logo">
                 <nav class="header-nav">
                     <a href="#" class="nav-link active">Painel</a>
+                    <a href="#" class="nav-link">Agendas</a>
                     <a href="#" class="nav-link">Planos</a>
                 </nav>
             </div>
@@ -135,6 +137,37 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <!-- VIEW: AGENDAS -->
+        <div id="agendas-view" class="view">
+            <div class="agendas-container">
+                <!-- Cabeçalho da página de agendas -->
+                <div class="agendas-header">
+                    <div>
+                        <h2>Minhas Agendas</h2>
+                        <p>Crie e gerencie as agendas dos seus profissionais ou recursos.</p>
+                    </div>
+                    <button id="create-agenda-btn" class="btn-primary">+ Criar Agenda</button>
+                </div>
+
+                <!-- Estado para quando NÃO HÁ agendas criadas -->
+                <div id="no-agendas-state" style="display: none;" class="welcome-state">
+                    <div class="welcome-card">
+                        <div class="welcome-icon">
+                            <svg width="80" height="80"><use xlink:href="#icon-calendar"/></svg>
+                        </div>
+                        <h2>Nenhuma agenda encontrada</h2>
+                        <p>Crie sua primeira agenda para começar a organizar seus horários e permitir que o bot agende para você.</p><br>
+                        <button id="start-agenda-creation-btn" class="btn-primary">Criar minha primeira agenda</button>
+                    </div>
+                </div>
+
+                <!-- Container onde a lista de agendas será exibida -->
+                <div id="agendas-list" class="agendas-list">
+                    <!-- Os cards de agenda serão inseridos aqui pelo JavaScript -->
+                </div>
             </div>
         </div>
 
@@ -577,6 +610,75 @@
                 <button type="button" class="btn-secondary" data-target-modal="schedule-modal">Cancelar</button>
                 <button type="button" class="btn-primary" id="save-schedule-btn">Salvar Horários</button>
             </div>
+        </div>
+    </div>
+
+    <!-- MODAL: CRIAÇÃO/EDIÇÃO DE AGENDA -->
+    <div id="agenda-modal" class="modal-overlay">
+        <div class="modal-container agenda-modal-container">
+            <!-- O formulário engloba todo o conteúdo para facilitar a submissão -->
+            <form id="agenda-form">
+                <div class="modal-header">
+                    <h3 id="agenda-modal-title">Criar Nova Agenda</h3>
+                    <button type="button" class="modal-close" data-target-modal="agenda-modal">×</button>
+                </div>
+                <div class="modal-content">
+                    <!-- Seção de Nome -->
+                    <div class="form-group">
+                        <label for="agenda-name">Nome da Agenda</label>
+                        <input type="text" id="agenda-name" placeholder="Ex: Barbeiro João, Dra. Ana (Psicóloga)" required maxlength="50">
+                        <small>Dê um nome que identifique o profissional ou recurso (Ex: Sala de Reunião).</small>
+                    </div>
+                    
+                    <hr>
+
+                    <!-- Seção de Serviços -->
+                    <div class="form-group">
+                        <label>Serviços Oferecidos</label>
+                        <div id="agenda-services-list" class="knowledge-list">
+                            <!-- Serviços serão adicionados aqui dinamicamente -->
+                        </div>
+                        <button type="button" id="add-agenda-service" class="btn-add">+ Adicionar Serviço</button>
+                        <small>Adicione os serviços que poderão ser agendados e suas durações.</small>
+                    </div>
+
+                    <hr>
+
+                    <!-- Seção de Configurações Adicionais -->
+                    <div class="form-group">
+                        <label>Configurações de Agendamento</label>
+                        <div class="settings-grid">
+                            <div class="setting-item">
+                                <label for="agenda-min-antecedence">Antecedência Mínima</label>
+                                <select id="agenda-min-antecedence">
+                                    <option value="60">1 hora</option>
+                                    <option value="120" selected>2 horas</option>
+                                    <option value="240">4 horas</option>
+                                    <option value="1440">1 dia</option>
+                                </select>
+                            </div>
+                            <div class="setting-item">
+                                <label for="agenda-max-days">Janela de Agendamento</label>
+                                <select id="agenda-max-days">
+                                    <option value="7">7 dias</option>
+                                    <option value="15">15 dias</option>
+                                    <option value="30" selected>30 dias</option>
+                                    <option value="60">60 dias</option>
+                                </select>
+                            </div>
+                            <div class="setting-item-toggle">
+                                <label for="agenda-auto-confirm">Confirmar Agendamentos Automaticamente</label>
+                                <label class="day-toggle"><input type="checkbox" id="agenda-auto-confirm" checked><span class="toggle-slider"></span></label>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-secondary" data-target-modal="agenda-modal">Cancelar</button>
+                    <button type="submit" class="btn-primary" id="save-agenda-btn">Salvar Agenda</button>
+                </div>
+            </form>
         </div>
     </div>
 
