--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
         <div class="modal-container agenda-modal-container">
             <!-- O formulário engloba todo o conteúdo para facilitar a submissão -->
             <form id="agenda-form">
+                <input type="hidden" id="agenda-edit-id">
                 <div class="modal-header">
                     <h3 id="agenda-modal-title">Criar Nova Agenda</h3>
                     <button type="button" class="modal-close" data-target-modal="agenda-modal">×</button>
