--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <symbol id="icon-scan" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><rect x="7" y="7" width="3" height="9"/><rect x="14" y="7" width="3" height="5"/></symbol>
             <symbol id="icon-qr-placeholder" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><rect x="3" y="3" width="5" height="5"/><rect x="3" y="16" width="5" height="5"/><rect x="16" y="3" width="5" height="5"/><path d="M21 16h-3a2 2 0 0 0-2 2v3"/><path d="M21 21v.01"/><path d="M12 7v3a2 2 0 0 1-2 2H7"/><path d="M3 12h.01"/><path d="M12 3h.01"/><path d="M12 16v.01"/><path d="M16 12h1"/><path d="M21 12v.01"/><path d="M12 21v-1"/></symbol>
             <symbol id="icon-calendar" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></symbol>
+            <symbol id="icon-lock" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></symbol>
+            <symbol id="icon-unlock" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 9.9-1"></path></symbol>
+            <symbol id="icon-plus-circle" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></symbol>
+            <symbol id="icon-edit" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></symbol>
         </defs>
     </svg>
 
@@ -744,6 +748,45 @@
             </form>
         </div>
     </div>
+
+    <!-- MODAL: AGENDAMENTO MANUAL -->
+    <div id="appointment-modal" class="modal-overlay">
+        <div class="modal-container">
+            <form id="appointment-form">
+                <input type="hidden" id="appointment-slot-start-time">
+                <input type="hidden" id="appointment-edit-id">
+
+                <div class="modal-header">
+                    <h3 id="appointment-modal-title">Novo Agendamento</h3>
+                    <button type="button" class="modal-close" data-target-modal="appointment-modal">×</button>
+                </div>
+                <div class="modal-content">
+                    <div class="form-group">
+                        <label for="appointment-service">Serviço</label>
+                        <select id="appointment-service" required>
+                            <!-- Opções de serviço serão populadas pelo JS -->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="appointment-client-name">Nome do Cliente</label>
+                        <input type="text" id="appointment-client-name" placeholder="Nome de quem será atendido" required maxlength="100">
+                    </div>
+                    <div class="form-group">
+                        <label for="appointment-client-phone">Telefone do Cliente (Opcional)</label>
+                        <input type="tel" id="appointment-client-phone" placeholder="Ex: 11987654321" maxlength="20">
+                    </div>
+                     <div class="form-group">
+                        <label for="appointment-notes">Observações (Opcional)</label>
+                        <textarea id="appointment-notes" rows="3" placeholder="Alguma observação sobre o cliente ou o serviço." maxlength="300"></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-secondary" data-target-modal="appointment-modal">Cancelar</button>
+                    <button type="submit" class="btn-primary" id="save-appointment-btn">Salvar Agendamento</button>
+                </div>
+            </form>
+        </div>
+    </div>    
 
 
     <!-- Scripts movidos para o final para carregamento otimizado da página -->
