--- a/index.html
+++ b/index.html
@@ -514,6 +514,10 @@
                                  <label for="edit-smart-snooze-minutes">Quantos minutos a IA deve descansar após um humano assumir o atendimento?</label>
                                  <input type="number" id="edit-smart-snooze-minutes" placeholder="15" min="1" max="120">
                              </div>
+                            <div class="operation-item">
+                                <label for="edit-agenda-enabled">Habilitar Agenda</label>
+                                <label class="day-toggle"><input type="checkbox" id="edit-agenda-enabled"><span class="toggle-slider"></span></label>
+                            </div>                             
                         </div>
 
                         <!-- Card de Encaminhamento -->
