--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="/app.js"></script>
 
 </body>
 </html>
