--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                         <div class="edit-card">
                             <h3>Funções Inteligentes</h3>
                             <div class="operation-item">
-                                <label for="edit-ask-for-name-enabled">Perguntar nome do lead</label>
+                                <label for="edit-ask-for-name-enabled">Perguntar Nome do Lead</label>
                                 <label class="day-toggle">
                                     <input type="checkbox" id="edit-ask-for-name-enabled">
                                     <span class="toggle-slider"></span>
