função de nome personalizado

--- a/index.html
+++ b/index.html
@@ -500,7 +500,10 @@
                         <div class="edit-card">
                             <h3>Funções Inteligentes</h3>
                             <div class="operation-item">
-                                <label for="edit-ask-for-name-enabled">Perguntar Nome do Lead</label>
+                                <div class="operation-item-label">
+                                    <label for="edit-ask-for-name-enabled">Ativar Atendimento Personalizado</label>
+                                    <small>Identifica e memoriza o nome do cliente para criar uma conversa mais próxima e eficaz.</small>
+                                </div>
                                 <label class="day-toggle">
                                     <input type="checkbox" id="edit-ask-for-name-enabled">
                                     <span class="toggle-slider"></span>
