comit depois de versao bem estavel para novo lembrete de agenda

--- a/index.html
+++ b/index.html
@@ -810,11 +810,11 @@
                             <div class="radio-group">
                                 <label class="radio-label">
                                     <input type="radio" name="reminder_timing" value="daily_9am" checked>
-                                    <span>Todos os dias às 9:00 da manhã</span>
+                                    <span>Todos os dias, às 9:00h.<br></span>
                                 </label>
                                 <label class="radio-label">
                                     <input type="radio" name="reminder_timing" value="relative_3hr">
-                                    <span>3 horas antes do horário agendado</span>
+                                    <span>3 horas antes do agendamento.</span>
                                 </label>
                             </div>
 
