--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
                             <h3>Funções Inteligentes</h3>
                             <div class="operation-item">
                                 <div class="operation-item-label">
-                                    <label for="edit-ask-for-name-enabled">Ativar Atendimento Personalizado</label>
+                                    <label for="edit-ask-for-name-enabled">Atendimento Personalizado</label>
                                 </div>
                                 <label class="day-toggle">
                                     <input type="checkbox" id="edit-ask-for-name-enabled">
                                     <span class="toggle-slider"></span>
                                 </label>
-                            </div>                            
+                            </div>                        
                             <div class="operation-item">
                                 <label for="edit-lead-collection-enabled">Coletar Leads</label>
                                 <label class="day-toggle"><input type="checkbox" id="edit-lead-collection-enabled"><span class="toggle-slider"></span></label>
@@ -820,8 +820,8 @@
 
                             <!-- Container para a seleção do bot, também controlado via JS -->
                             <div id="agenda-bot-selector-container" style="display: none; margin-top: 1.5rem;">
-                                <label for="agenda-responsible-bot">Assistente Responsável pelo Envio <br></label>
-                                <small>Escolha qual dos seus assistentes deve enviar os lembretes para esta agenda.</small>
+                                <!-- <label for="agenda-responsible-bot">Assistente Responsável<br></label> -->
+                                <small>Qual dos seus assistentes deve enviar os lembretes?</small>
                                 <div class="custom-select-wrapper">
                                     <select id="agenda-responsible-bot">
                                         <!-- Opções de bots serão populadas pelo JavaScript -->
