--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                     
                     <!-- COLUNA LATERAL (DIREITA) -->
                     <div class="edit-sidebar">
-                        <!-- Card de Operação -->
+                        <!-- Card de Operaçãao -->
                         <div class="edit-card">
                             <h3>Funções Inteligentes</h3>
                             <div class="operation-item">
