--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <!-- CABEÇALHO DA PÁGINA DE EDIÇÃO -->
                 <div class="edit-page-header">
                     <div>
-                        <h2>Editando: <span id="editing-bot-name-header">Bot de Teste</span></h2>
+                        <h2>Editando Assistente <span id="editing-bot-name-header"></span></h2>
                         <p>Ajuste todas as configurações do seu assistente em um só lugar.</p>
                     </div>
                     <div class="header-actions">
